; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192su/extr_r8180_93cx6.c_eprom_r.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192su/extr_r8180_93cx6.c_eprom_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

@EPROM_CMD = common dso_local global i32 0, align 4
@EPROM_R_SHIFT = common dso_local global i32 0, align 4
@EPROM_DELAY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local signext i16 @eprom_r(%struct.net_device* %0) #0 {
  %2 = alloca i16, align 2
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca i16, align 2
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  %5 = load %struct.net_device*, %struct.net_device** %3, align 8
  %6 = load i32, i32* @EPROM_CMD, align 4
  %7 = call i32 @read_nic_byte_E(%struct.net_device* %5, i32 %6)
  %8 = load i32, i32* @EPROM_R_SHIFT, align 4
  %9 = shl i32 1, %8
  %10 = and i32 %7, %9
  %11 = trunc i32 %10 to i16
  store i16 %11, i16* %4, align 2
  %12 = load i32, i32* @EPROM_DELAY, align 4
  %13 = call i32 @udelay(i32 %12)
  %14 = load i16, i16* %4, align 2
  %15 = icmp ne i16 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %1
  store i16 1, i16* %2, align 2
  br label %18

17:                                               ; preds = %1
  store i16 0, i16* %2, align 2
  br label %18

18:                                               ; preds = %17, %16
  %19 = load i16, i16* %2, align 2
  ret i16 %19
}

declare dso_local i32 @read_nic_byte_E(%struct.net_device*, i32) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
